# me433

./: notes.txt
hw12/: CMakeLists.txt  hw12.c
hw13/: CMakeLists.txt  hw13.c
hw14/: FFT.py  FIR.py  IIR.py  MAF.py
hw16/: CMakeLists.txt  hw16.c
hw17/: CMakeLists.txt  hw17.c  hw17.py
hw3/: CMakeLists.txt  hw3.c
hw4/: CMakeLists.txt  hw4.c
hw5/: CMakeLists.txt  hw5.c
hw6/: CMakeLists.txt  hw6.c
hw7/: CMakeLists.txt  hw7.c  ssd1306.c
hw9/: CMakeLists.txt  hw9.c
template/: CMakeLists.txt  template.c
